fix java version