@@ -60,7 +60,7 @@ public class PathFindingFalling extends PathFindingType {
                 path.remove(i+1);
         }
         if (1 < path.size())
-            path.removeFirst();
+            path.remove(0);
         return path;
     }
 
